--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul class="navigation-menu">
           <li class="navigation-item"><a href="#about">Acceuil</a></li>
           <li class="navigation-item"><a href="#ingredients">Horraires</a></li>
-          <li class="navigation-item"><a href="#menu">Carte</a></li>
+          <li class="navigation-item"><a href="#carte">Carte</a></li>
           <li class="navigation-item"><a href="#reviews">Accés</a></li>
           <li class="navigation-item"><a href="#reservations">Livraison</a></li>
         </ul>
@@ -53,7 +53,7 @@
     </h1>
     <div class="banner-buttons">
       <a href="#reviews" class="button button-primary">Accés</a>
-      <a href="#menu" class="button button-secondary">Carte</a>
+      <a href="#carte" class="button button-secondary">Carte</a>
     </div>
   </div>
 </div>
