--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </ul>
         <ul class="navigation-social">
           <li class="navigation-item-social"><a class="social social-twitter" href="#"><span class="sr">Twitter</span></a></li>
-          <li class="navigation-item-social"><a class="social social-facebook" href="#"><span class="sr">Facebook</span></a></li>
+          <li class="navigation-item-social"><a class="social social-facebook" href="https://www.facebook.com/LoulouPizza/?ref=br_rs"><span class="sr">Facebook</span></a></li>
           <li class="navigation-item-social"><a class="social social-google-plus" href="#"><span class="sr">Google Plus</span></a></li>
         </ul>
       </div>
@@ -48,7 +48,7 @@
   </div>
   <div class="banner-inner container">
     <h1 class="banner-lead">
-      <span class="banner-lead-1">Bienvenue chez Loulou Pizza</span>
+      <span class="banner-lead-1">Bienvenue chez Loulou Pizza</span><br>
       <span class="banner-lead-2" style="font-size: 18px;">Nous vous proposons un large choix de pizzas à emporter ou en livraison</span>
     </h1>
     <div class="banner-buttons">
