--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </label>
       <div class="navigation">
         <ul class="navigation-menu">
-          <li class="navigation-item"><a href="#about">Acceuil</a></li>
+          <li class="navigation-item"><a href="#haut">Acceuil</a></li>
           <li class="navigation-item"><a href="#ingredients">Horraires</a></li>
           <li class="navigation-item"><a href="#carte">Carte</a></li>
           <li class="navigation-item"><a href="#reviews">Accés</a></li>
