--- a/index.html
+++ b/index.html
@@ -621,12 +621,13 @@
     </div>
 	 <div class="reviews-block-inner container">
     <div class="feature-box text-center col-12-m col-8-l no-float center">
+	    <!--
      <h2 class="heading" style="color:#c90;">Loulou Pizzas sur Facebook!</h2>
       
        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FLoulouPizza/&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=44830624399" width="350" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe> 
         <div class="banner-buttons">
             <a href="#haut" class="button button-primary" style="background-color:#c90;">Remonter en haut de la page</a>
-       </div>
+       </div>-->
       </div>
   </div>
 </div>
